--- a/index.html
+++ b/index.html
@@ -317,197 +317,172 @@
 
 
 
-	<!-- <section class="ftco-section ftco-no-pb" id="resume-section">
-		<div class="container">
-			<div class="row justify-content-center pb-5">
-				<div class="col-md-10 heading-section text-center ftco-animate">
-					<h1 class="big big-2">Resume</h1>
-					<h2 class="mb-4">Resume</h2>
-					<p>Seasoned Senior Data Analyst with 5+ years of experience driving business strategies through data-driven
-						insights. Proven expertise in data science, statistical analysis, machine learning algorithms and project
-						management.</p>
-				</div>
-			</div>
+<section class="ftco-section ftco-no-pb" id="resume-section">
+  <div class="container">
 
-			<div class="row">
-				<h1 class="big-4">Experience</h1>
-				<div class="underline"></div>
-			</div>
-			<br>
+    <!-- Section Heading -->
+    <div class="row justify-content-center pb-5">
+      <div class="col-md-10 heading-section text-center ftco-animate">
+        <h1 class="big big-2">Resume</h1>
+        <h2 class="mb-4">Resume</h2>
+        <p>
+          Final-year Computer Science student with strong foundations in
+          Machine Learning, Deep Learning, and Data Analytics.
+        </p>
+      </div>
+    </div>
 
-			<!-- <div class="row">
-				<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2021-Present</span>
-						<h2>Senior Data Analyst</h2>
-						<span class="position">Merkle</span>
-						<p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part
-							of Dentsu International.
-						<ul>
-							<li>Analysed ad campaigns, clickstream, and customer surveys data, identified an increasing demand and
-								launched a strategic product line.</li>
-							<li>Developed time series forecasting models to predict sales and optimize marketing budgets, got model
-								performance of 92%.</li>
-							<li>Designed and executed A/B tests, performed rigorous statistical analysis. Led to 20% MoM increase in
-								the conversion rate.</li>
-						</ul>
-						</p>
-					</div>
+    <!-- Education -->
+    <div class="row">
+      <div class="col-md-12">
+        <h1 class="big-4">Education</h1>
+        <div class="underline"></div>
+      </div>
+    </div>
 
-				</div>
+    <br>
 
-				<!-- <div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2018-2021</span>
-						<h2>Senior Data Analyst</h2>
-						<span class="position">iQuanti</span>
-						<p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100
-							global brands.
-						<ul>
-							<li>Performed in-depth market research and analysis to create online pages. Resulted in ~100% website
-								growth and 30% increase in conversion rate YoY.</li>
-							<li>Delivered multiple training and mentorship sessions on analytical tools like SQL, MS Excel, Power BI,
-								Tableau and Python.</li>
-							<li>Performed migration and enhancements for merchandising dashboard, involved data integration and its
-								feature improvement.</li>
-						</ul>
-						</p>
-					</div>
+    <div class="row">
 
-				</div> -->
-	</div> -->
+      <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+          <span class="date">2021 – 2025</span>
+          <h2>Bachelor of Engineering (Computer Science)</h2>
+          <span class="position">Bihar Engineering University</span>
+          <p class="mt-4">Grade: First Class Distinction</p>
+        </div>
+      </div>
 
-	<br>
-	<br>
+      <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+          <span class="date">2018 – 2020</span>
+          <h2>Higher Secondary School</h2>
+          <span class="position">L N T College</span>
+          <p class="mt-4">Grade: First Class Distinction</p>
+        </div>
+      </div>
 
-	<div class="row">
-		<h1 class="big-4">Education</h1>
-		<div class="underline"></div>
-	</div>
-	<br>
+    </div>
 
-	<div class="row">
-		<div class="col-md-6">
-			<div class="resume-wrap ftco-animate">
-				<span class="date">2021-2025</span>
-				<h2>Bachelor of Engineering</h2>
-				<span class="position">Bihar Engineering University</span>
-				<p class="mt-4">Grade: First class distinction.</p>
-			</div>
-		</div>
+    <!-- Resume Download -->
+    <div class="row justify-content-center mt-5">
+      <div class="col-md-6 text-center ftco-animate">
+        <p>
+          <a
+            href="https://drive.google.com/file/d/1Cmz6uvUBps6OOJIv61uxpcFP6cogJtvA/view?usp=sharing"
+            class="btn btn-primary py-4 px-5"
+            target="_blank"
+          >
+            Download CV
+          </a>
+        </p>
+      </div>
+    </div>
 
-		<div class="col-md-6">
-			<div class="resume-wrap ftco-animate">
-				<span class="date">2018-2020</span>
-				<h2>Higher Secondary School</h2>
-				<span class="position">L N T College</span>
-				<p class="mt-4">Grade: First class distinction.</p>
-			</div>
-		</div>
-	</div>
-
-	<div class="row justify-content-center mt-5">
-		<div class="col-md-6 text-center ftco-animate">
-			<p><a href="https://drive.google.com/file/d/1Cmz6uvUBps6OOJIv61uxpcFP6cogJtvA/view?usp=sharing"
-					class="btn btn-primary py-4 px-5">Download CV</a></p>
-		</div>
-	</div>
-	</div>
-	</section> -->
+  </div>
+</section>
 
 
+<section class="ftco-section" id="project-section">
+  <div class="container">
 
-	<section class="ftco-section" id="project-section">
-		<div class="container">
-			<div class="row justify-content-center mb-5 pb-5">
-				<div class="col-md-7 heading-section text-center ftco-animate">
-					<h1 class="big big-2">Projects</h1>
-					<h2 class="mb-4">Projects</h2>
-					<p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
-				</div>
-			</div>
-			<!-- <div class="row d-flex">
-				<div class="col-md-4 d-flex ftco-animate">
-					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/shivamgyardhna/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql"
-							class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
-						</a>
-						<div class="text mt-3 float-right d-block">
+    <!-- Section Heading -->
+    <div class="row justify-content-center mb-5">
+      <div class="col-md-8 heading-section text-center ftco-animate">
+        <h1 class="big big-2">Projects</h1>
+        <h2 class="mb-4">Projects</h2>
+        <p>My work across Machine Learning, Deep Learning, Data Analytics, and Data Mining.</p>
+      </div>
+    </div>
 
-							<h3 class="heading"><a
-									href="https://github.com/shivamgyardhna/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital
-									Music Store Data Analysis using SQL</a></h3>
-							<p>Analyzed music store data using advanced SQL queires to identify gaps and increase the business growth.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 d-flex ftco-animate">
-					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/shivamgyardhna/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb"
-							class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
-						</a>
-						<div class="text mt-3 float-right d-block">
+    <!-- CATEGORY SELECTOR -->
+    <div class="row justify-content-center mb-5">
+      <div class="col-md-10 text-center">
+        <div class="project-category-wrapper">
+          <button class="category-btn active" data-category="ml">Machine Learning</button>
+          <button class="category-btn" data-category="dl">Deep Learning</button>
+          <button class="category-btn" data-category="data">Data Analytics</button>
+          <button class="category-btn" data-category="mining">Data Mining</button>
+        </div>
+      </div>
+    </div>
 
-							<h3 class="heading"><a
-									href="https://github.com/shivamgyardhna/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Data
-									Analysis using Python Project for Beginners</a></h3>
-							<p>Performed exploratory data analysis on diwali sales data using Python to improve the customer
-								experience.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 d-flex ftco-animate">
-					<div class="blog-entry">
-						<a href="https://github.com/shivamgyardhna/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg"
-							class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
-						</a>
-						<div class="text mt-3 float-right d-block">
+    <!-- PROJECT GRID -->
+    <div class="row project-grid">
 
-							<h3 class="heading"><a
-									href="https://github.com/shivamgyardhna/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Power
-									BI Sales dashboard Project for Beginners</a></h3>
-							<p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<br>
-			<!-- added justify-content-center to center align the last two projects -->
-			<!-- <div class="row d-flex justify-content-center">
-				<div class="col-md-4 d-flex ftco-animate">
-					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/shivamgyardhna/sales_forecasting/tree/main" class="block-20 zoom-effect"
-							style="background-image: url('images/proj_4.jpg');">
-						</a>
-						<div class="text mt-3 float-right d-block">
+      <!-- MACHINE LEARNING -->
+      <div class="col-md-4 ftco-animate project-item" data-category="ml">
+        <a href="https://github.com/shivamgyardhna/CLASSIFICATION_REPO"
+           target="_blank" class="project-box">
+          <img src="images/ML.jfif" alt="Classification Models">
+          <h4>Classification Models</h4>
+          <p>Logistic Regression, KNN, Decision Trees on real datasets.</p>
+        </a>
+      </div>
 
-							<h3 class="heading"><a href="https://github.com/shivamgyardhna/sales_forecasting/tree/main">Sales
-									Forecast- Time Series Forecasting</a></h3>
-							<p>Used multiple machine learning models to forecast sales (retail store) and performed time series
-								analysis.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 d-flex ftco-animate">
-					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/shivamgyardhna/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb"
-							class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
-						</a>
-						<div class="text mt-3 float-right d-block">
+      <div class="col-md-4 ftco-animate project-item" data-category="ml">
+        <a href="https://github.com/shivamgyardhna/REGRESSION_REPO"
+           target="_blank" class="project-box">
+          <img src="images/ml_regression.jpg" alt="Regression Models">
+          <h4>Regression Models</h4>
+          <p>Linear & Polynomial Regression for predictive tasks.</p>
+        </a>
+      </div>
 
-							<h3 class="heading"><a
-									href="https://github.com/shivamgyardhna/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">Customer
-									Segmentation using clustering model</a></h3>
-							<p>Developed a ML model to give various recommendations of financial products &amp; services on target
-								customer groups.</p>
-						</div>
-					</div>
-				</div>
-			</div> --> -->
-		</div>
-	</section>
+      <!-- DEEP LEARNING -->
+      <div class="col-md-4 ftco-animate project-item" data-category="dl">
+        <a href="https://github.com/shivamgyardhna/CNN_REPO"
+           target="_blank" class="project-box">
+          <img src="images/dl_cnn.jpg" alt="CNN">
+          <h4>CNN – Image Classification</h4>
+          <p>Convolutional Neural Networks for image data.</p>
+        </a>
+      </div>
+
+      <div class="col-md-4 ftco-animate project-item" data-category="dl">
+        <a href="https://github.com/shivamgyardhna/GAN_REPO"
+           target="_blank" class="project-box">
+          <img src="images/dl_gan.jpg" alt="GAN">
+          <h4>GAN – Image Generation</h4>
+          <p>Generative Adversarial Networks for synthetic images.</p>
+        </a>
+      </div>
+
+      <!-- DATA ANALYTICS -->
+      <div class="col-md-4 ftco-animate project-item" data-category="data">
+        <a href="https://github.com/shivamgyardhna/SQL_ANALYTICS_REPO"
+           target="_blank" class="project-box">
+          <img src="images/data_sql.jpg" alt="SQL Analytics">
+          <h4>SQL Data Analysis</h4>
+          <p>Advanced SQL queries for business insights.</p>
+        </a>
+      </div>
+
+      <div class="col-md-4 ftco-animate project-item" data-category="data">
+        <a href="https://github.com/shivamgyardhna/POWERBI_REPO"
+           target="_blank" class="project-box">
+          <img src="images/data_powerbi.jpg" alt="Power BI">
+          <h4>Power BI Dashboards</h4>
+          <p>Interactive dashboards for KPI tracking.</p>
+        </a>
+      </div>
+
+      <!-- DATA MINING -->
+      <div class="col-md-4 ftco-animate project-item" data-category="mining">
+        <a href="https://github.com/shivamgyardhna/DATA_MINING_REPO"
+           target="_blank" class="project-box">
+          <img src="images/data_mining.jpg" alt="Data Mining">
+          <h4>Pattern Discovery</h4>
+          <p>Frequent pattern mining & association rules.</p>
+        </a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+</section>
+
 
 	<!-- <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
 		<div class="container">
@@ -685,6 +660,33 @@
 	<script src="js/scrollax.min.js"></script>
 
 	<script src="js/main.js"></script>
+
+   
+
+<script>
+  const categoryButtons = document.querySelectorAll(".category-btn");
+  const projectItems = document.querySelectorAll(".project-item");
+
+  categoryButtons.forEach(button => {
+    button.addEventListener("click", () => {
+      const category = button.getAttribute("data-category");
+
+      categoryButtons.forEach(btn => btn.classList.remove("active"));
+      button.classList.add("active");
+
+      projectItems.forEach(item => {
+        if (item.getAttribute("data-category") === category) {
+          item.style.display = "block";
+        } else {
+          item.style.display = "none";
+        }
+      });
+    });
+  });
+
+  // Default category
+  document.querySelector('.category-btn[data-category="ml"]').click();
+</script>
 
 </body>
 
