adding resume and college

--- a/index.html
+++ b/index.html
@@ -323,8 +323,21 @@
         <h1 class="big big-2">Resume</h1>
         <h2 class="mb-4">Resume</h2>
         <p>
-          Final-year Computer Science student with strong foundations in
-          Machine Learning, Deep Learning, and Data Analytics.
+          
+					  <!-- Resume Download -->
+    <div class="row justify-content-center mt-5">
+      <div class="col-md-6 text-center ftco-animate">
+        <p>
+          <a
+            href="https://drive.google.com/file/d/1Nh-lE1NnI3iCOVL34tYxOiBgOuN6lvYi/view?usp=sharing"
+            class="btn btn-primary py-4 px-5"
+            target="_blank"
+          >
+            Download CV
+          </a>
+        </p>
+      </div>
+    </div>
         </p>
       </div>
     </div>
@@ -341,12 +354,20 @@
 
     <div class="row">
 
+			      <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+          <span class="date">2025 – Present</span>
+          <h2>M-Tech (Data Science & Engineering)</h2>
+          <span class="position">NIT Agartala </span>
+          <p class="mt-4">Grade: 8.6</p>
+        </div>
+      </div>
       <div class="col-md-6">
         <div class="resume-wrap ftco-animate">
           <span class="date">2021 – 2025</span>
-          <h2>Bachelor of Engineering (Computer Science)</h2>
+          <h2>B-Tech (Computer Science)</h2>
           <span class="position">Bihar Engineering University</span>
-          <p class="mt-4">Grade: First Class Distinction</p>
+          <p class="mt-4">Grade: 8.43</p>
         </div>
       </div>
 
@@ -355,7 +376,7 @@
           <span class="date">2018 – 2020</span>
           <h2>Higher Secondary School</h2>
           <span class="position">L N T College</span>
-          <p class="mt-4">Grade: First Class Distinction</p>
+          <p class="mt-4">Grade: 79.2</p>
         </div>
       </div>
 
