--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 
 									// Create an array of typing text
 									const typingTexts = [
+									   'Reserch Scholar',
 										'Full Stack Web Developer',
 										'Data Scientist',
 										'Software Engineer',
@@ -382,20 +383,6 @@
 
     </div>
 
-    <!-- Resume Download -->
-    <div class="row justify-content-center mt-5">
-      <div class="col-md-6 text-center ftco-animate">
-        <p>
-          <a
-            href="https://drive.google.com/file/d/1Cmz6uvUBps6OOJIv61uxpcFP6cogJtvA/view?usp=sharing"
-            class="btn btn-primary py-4 px-5"
-            target="_blank"
-          >
-            Download CV
-          </a>
-        </p>
-      </div>
-    </div>
 
   </div>
 </section>
@@ -409,7 +396,6 @@
       <div class="col-md-8 heading-section text-center ftco-animate">
         <h1 class="big big-2">Projects</h1>
         <h2 class="mb-4">Projects</h2>
-        <p>My work across Machine Learning, Deep Learning, Data Analytics, and Data Mining.</p>
       </div>
     </div>
 
@@ -448,7 +434,15 @@
       </div>
 
       <!-- DEEP LEARNING -->
-      <div class="col-md-4 ftco-animate project-item" data-category="dl">
+         <div class="col-md-4 ftco-animate project-item" data-category="dl">
+        <a href="https://github.com/shivamgyardhna/Neural_Network_from_scratch"
+           target="_blank" class="project-box">
+          <img src="images\NN_4_Scratch.jfif" alt="CNN">
+          <h4>NURAL NETWORK FROM SCRATCH</h4>
+          <p>Implement NEURAL Networks From Scratch </p>
+        </a>
+      </div>
+			<div class="col-md-4 ftco-animate project-item" data-category="dl">
         <a href="https://github.com/shivamgyardhna/CNN_REPO"
            target="_blank" class="project-box">
           <img src="images/dl_cnn.jpg" alt="CNN">
@@ -557,83 +551,92 @@
 	</section>
 
 
+<section class="contact-modern" id="contact-section">
+  <div class="contact-container">
 
-	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
-		<div class="container">
-			<div class="row justify-content-center mb-5 pb-3">
-				<div class="col-md-7 heading-section text-center ftco-animate">
-					<h1 class="big big-2">Contact</h1>
-					<h2 class="mb-4">Contact Me</h2>
-					<p>Below are the details to reach out to me!</p>
-				</div>
-			</div>
+    <!-- LEFT: Contact Info -->
+    <div class="contact-info">
+      <h2 class="contact-title">Let's Work Together</h2>
+      <p class="contact-subtitle">
+        Interested in research collaboration, projects, or opportunities?
+        I’d love to discuss how we can work together.
+      </p>
 
-			<div class="row d-flex contact-info mb-5">
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-					<div class="align-self-stretch box p-4 text-center">
-						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-map-signs"></span>
-						</div>
-						<h3 class="mb-4">Address</h3>
-						<p>Patna, India</p>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-					<div class="align-self-stretch box p-4 text-center">
-						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-phone2"></span>
-						</div>
-						<h3 class="mb-4">Contact Number</h3>
-						<p><a href="tel://9153667977">+91 9153667977</a></p>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-					<div class="align-self-stretch box p-4 text-center">
-						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-paper-plane"></span>
-						</div>
-						<h3 class="mb-4">Email Address</h3>
-						<p><a href="mailto:shivamcse2k21@gmail.com">shivamcse2k21@gmail.com</a></p>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-					<div class="align-self-stretch box p-4 text-center">
-						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-globe"></span>
-						</div>
-						<h3 class="mb-4">Download Resume</h3>
-						<p><a href="https://drive.google.com/file/d/1Cmz6uvUBps6OOJIv61uxpcFP6cogJtvA/view?usp=sharing">
-								resumelink</a></p>
-					</div>
-				</div>
+      <div class="info-item">
+        <span class="icon icon-paper-plane"></span>
+        <div>
+          <h4>Email</h4>
+          <p>shivamcse2k21@gmail.com</p>
+        </div>
+      </div>
 
-				<div class="container">
-					<br>
-					<br>
-					<!-- <div class="row justify-content-center">
-						<div class="col-md-7 ftco-animate text-center">
-							<h2>Have a<span> Question? </span> <a href="https://forms.gle/uLaTShUKXraAvHJ77"
-									class="btn btn-primary py-3 px-5">Click Here</a> </h2>
-						</div> -->
-				</div>
-				<br>
-				<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
-					<li class="ftco-animate normal-txt">Find me on </li>
-					<!-- <li class="ftco-animate"><a href="https://www.youtube.com/@RishabhMishraOfficial"><span -->
-					<!-- class="icon-youtube"></span></a></li> -->
-					<li class="ftco-animate"><a href="https://www.linkedin.com/in/shivamcse2k21/"><span
-								class="icon-linkedin"></span></a></li>
-					<!-- <li class="ftco-animate"><a href="https://twitter.com/rishabhnmishra"><span class="icon-twitter"></span></a> -->
-					</li>
-					<!-- <li class="ftco-animate"><a href="https://twitter.com/rishabhnmishra"><span
-									class="icon-facebook"></span></a></li> -->
-					<!-- <li class="ftco-animate"><a href="https://www.instagram.com/rishabhnmishra/"><span
-									class="icon-instagram"></span></a></li> -->
-				</ul>
-				<br>
-			</div>
-		</div>
-	</section>
+      <div class="info-item">
+        <span class="icon icon-map-signs"></span>
+        <div>
+          <h4>Location</h4>
+          <p>Patna, India</p>
+        </div>
+      </div>
+
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/shivamcse2k21/" target="_blank">
+          <span class="icon-linkedin"></span>
+        </a>
+        <a href="mailto:shivamcse2k21@gmail.com">
+          <span class="icon-paper-plane"></span>
+        </a>
+        <a href="https://drive.google.com/file/d/1Cmz6uvUBps6OOJIv61uxpcFP6cogJtvA/view">
+          <span class="icon-globe"></span>
+        </a>
+      </div>
+    </div>
+
+    <!-- RIGHT: Contact Form -->
+    <div class="contact-form-box">
+<form
+  id="google-form"
+  action="https://docs.google.com/forms/d/e/1FAIpQLSf_oK-XXAxhoo8zpnbU09q8v8SZvByjKhieT-mU96oh7mEWBQ/formResponse"
+  method="POST"
+  target="hidden_iframe"
+  onsubmit="handleSubmit()"
+>
+
+  <div class="form-group">
+    <label>Your Name</label>
+    <input type="text" name="entry.451453939" required>
+  </div>
+
+  <div class="form-group">
+    <label>Email</label>
+    <input type="email" name="entry.143274586" required>
+  </div>
+
+  <div class="form-group">
+    <label>Message</label>
+    <textarea name="entry.870439849" rows="4"></textarea>
+  </div>
+
+  <button type="submit" class="send-btn">
+    Send Message →
+  </button>
+
+</form>
+
+<iframe
+  name="hidden_iframe"
+  style="display:none;"
+  onload="handleIframeLoad()"
+></iframe>
+
+<p id="success-msg" style="display:none;color:green;">
+✅ Message sent successfully!
+</p>
+
+
+    </div>
+
+  </div>
+</section>
 
 
 
@@ -643,13 +646,19 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 
-					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;
-						<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
-						<i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com"
-							target="_blank">Colorlib</a>
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					</p>
+			<p>
+  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+  Copyright &copy;
+  <script>document.write(new Date().getFullYear());</script>
+  All rights reserved | This template is made with
+  <i class="icon-heart color-danger" aria-hidden="true"></i>
+  by
+  <a href="https://shivamgyardhna.github.io/Shivam_portfolioo/" target="_blank">
+    Shivam
+  </a>
+  <!-- Link back to Shivam can't be removed. Template is licensed under CC BY 3.0. -->
+</p>
+
 				</div>
 			</div>
 		</div>
@@ -679,10 +688,8 @@
 
 	<script src="js/main.js"></script>
 
-   
-
-<script>
-  const categoryButtons = document.querySelectorAll(".category-btn");
+	<script >
+		  const categoryButtons = document.querySelectorAll(".category-btn");
   const projectItems = document.querySelectorAll(".project-item");
 
   categoryButtons.forEach(button => {
@@ -704,7 +711,34 @@
 
   // Default category
   document.querySelector('.category-btn[data-category="ml"]').click();
-</script>
+
+	//for summit form
+ let submitted = false;
+
+  function handleSubmit() {
+    submitted = true;
+  }
+
+  function handleIframeLoad() {
+    if (submitted) {
+      const form = document.getElementById("google-form");
+      const msg = document.getElementById("success-msg");
+
+      form.reset();
+      msg.style.display = "block";
+
+      // hide message after 3 seconds
+      setTimeout(() => {
+        msg.style.display = "none";
+      }, 3000);
+
+      submitted = false;
+    }
+  }
+	</script>
+
+   
+
 
 </body>
 
